<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoIdea</string>
    <string name="app_id">177255062477657</string>
    <string name="action_settings">Settings</string>
    <string name="app_greeting">Hey NoIdea,</string>
    <string name="app_question_start">"What do i "</string>
    <string name="tell_me_button">Tell me</string>
    <string name="fragment_suggestion_list_title">Suggestions List</string>
    <string name="app_question_end">now?</string>
    <string name="title_activity_post_suggestion">Create Suggestion</string>
    <string name="title_activity_login">NoIdea</string>
    
    <string name="menu_home">Home</string>
	<string name="menu_search">Search</string>
	<string name="menu_new">Create</string>
	<string name="menu_favourite">Favourite</string>
	<string name="rateButton">Rate</string>
	<string name="suggestion_image_description">Suggestion Image</string>
	<string name="fav_image_description">Favourite</string>
	<string name="share_image_description">Share</string>
	<string name="flag_image_description">Flag</string>
	<string name="points_message">"Currently you have: "</string>
	<string name="points_str">" points"</string>
	<string name="zero">0</string>
	<string name="rank_label">"You need "</string>
	<string name="rank_label_end">" points for the next rank."</string>
	<string name="category_label">Category</string>
	<string name="description_label">Description</string>
	<string name="description_hint">Enter Description</string>
	<string name="create_suggestion_button">Create Suggestion</string>
	<string name="title_label">Title</string>
	<string name="title_hint">Enter Title</string>
	<string name="take_a_picture_button">Take a picture</string>
	<string name="load_image_button">Load image from gallery</string>
	<string name="logout_button">Logout</string>
	<string name="browse_suggestions_button">Browse Suggestions</string>

</resources>
