<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/home"
        android:orderInCategory="0"
        android:showAsAction="always" />
    
    <item android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:showAsAction="always" />    

    <item android:id="@+id/menu_new"
        android:title="@string/menu_new"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="2"
        android:showAsAction="always" />
    
    <item android:id="@+id/menu_favourite"
        android:title="@string/menu_favourite"
        android:icon="@drawable/ic_action_favorite"
        android:orderInCategory="3"
        android:showAsAction="always" />

</menu>
